2006-03-20  Aaron Bockover  <aaron@abock.org>

	* banshee-locker-plugin: Initial import
